2012-05-18  Koichiro Kikuchi <koichiro@rworks.jp>

	* godmode/agentes/configurar_agente.php: Added missing io_safe_input
	 to the module copy operation.

2012-05-17  Sergio Martin <sergio.martin@artica.es>

	* install.php: Fixed number of step mistakes
	in the install process

2012-05-17  Sergio Martin <sergio.martin@artica.es>

	* include/functions_api.php: Added create_network_module_from_component 
	operation to API
	Merged from trunk

2012-05-17  Sergio Martin <sergio.martin@artica.es>

        * extras/pandoradb_migrate_v3.2_to_v4.0.sql: Added a entity
	        encode to network component name

2012-05-17  Kikuchi Koichiro  <koichiro@rworks.jp>

	* extensions/update_manager/settings.php,
	  extensions/update_manager/main.php: Added missing dbport parameter to
	 um_db_connect() call.

2012-05-17  Kikuchi Koichiro  <koichiro@rworks.jp>

	* extensions/update_manager.php,
	  extensions/update_manager/sql/update_manager.sql,
	  extensions/update_manager/sql/update_manager.postgreSQL.sql,
	  extensions/update_manager/sql/update_manager.oracle.sql,
	  extensions/update_manager/lib/libupdate_manager_client.php,
	  extensions/update_manager/lib/libupdate_manager.php,
	  include/db/postgresql.php,
	  include/db/oracle.php,
	  include/db/mysql.php,
	  include/functions_config.php,
	  include/config_process.php,
	  include/functions_db.php: Merged from trunk: Now pandora_console support DB
	 running on non-standard port.

2012-05-14 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/styles/pandora.css: Added transparent background in input
	html elements of image type.

2012-05-12  Junichi Satoh  <junichi@rworks.jp>

	* godmode/reporting/reporting_builder.item_editor.php: Merged from
	trunk. Wrapped inventory_get_agents() in enterprise_hook();

2012-05-11 Miguel de Dios <miguel.dedios@artica.es>
	
	* extensions/update_manager/lib/functions.php: fixed into the
	function "update_pandora_installation" lost var,  and into the