@@ -1,3 +1,9 @@
+2012-05-22  Junichi Satoh  <junichi@rworks.jp>
+
+	* operation/messages/message_edit.php,
+	operation/messages/message_list.php: Merged from trunk. Changed words
+	for sender and destination.
+
 2012-05-18  Koichiro Kikuchi <koichiro@rworks.jp>
 
 	* godmode/agentes/configurar_agente.php: Added missing io_safe_input
